automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -734,10 +734,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
@@ -745,27 +743,48 @@
     "    for term in list_of_terms:\n",
     "        constant = term[0]\n",
     "        x_exp = term[1]\n",
-    "        y_exp = term[2]"
+    "        y_exp = term[2]\n",
+    "        result = constant * (x_value ** x_exp) * (y_value ** y_exp)\n",
+    "        output.append(result)\n",
+    "    return sum(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "multivariable_output_at(four_x_squared_y_plus_three_x_plus_y, 1, 1) # 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "multivariable_output_at(four_x_squared_y_plus_three_x_plus_y, 2, 2) # 40"
    ]
